update login component

--- a/Facecare/src/app/core/header/header.component.html
+++ b/Facecare/src/app/core/header/header.component.html
@@ -39,8 +39,8 @@
                    
                     <!-- Log in -->
                     <li class="nav-item ms-lg-auto">
-                        <a class="btn btn-outline-success me-2 me-lg-0" href="../page-login.html">Log in</a>
-                        <a class="btn btn-dark d-lg-none" href="../page-signup.html">Sign up</a>
+                        <a class="btn btn-outline-success me-2 me-lg-0" routerLink="/user/login">Log in</a>
+                        <a class="btn btn-dark d-lg-none" routerLink="/user/register">Sign up</a>
                     </li>
                     <!-- End Log in -->
 
