--- a/Facecare/src/app/user/login/login.component.html
+++ b/Facecare/src/app/user/login/login.component.html
@@ -22,7 +22,8 @@
                                     <label class="form-label" for="signupSrEmail">Your email</label>
                                     <input type="email" class="form-control form-control-lg" name="email"
                                         id="signupSrEmail" placeholder="Markwilliams@site.com"
-                                        aria-label="Markwilliams@site.com" ngModel #inputEmail="ngModel" required
+                                        aria-label="Markwilliams@site.com" 
+                                        ngModel #inputEmail="ngModel" required
                                         email="email">
                                 </div>
                                 <ng-container *ngIf="inputEmail.touched">
