--- a/Facecare/src/app/errors/no-procedures/no-procedures.component.html
+++ b/Facecare/src/app/errors/no-procedures/no-procedures.component.html
@@ -1,1 +1,11 @@
-<p>no-procedures works!</p>
+<!-- CTA -->
+<div class="container content-space-1">
+    <div class="w-lg-75 text-center mx-lg-auto">
+      <figure class="mb-7">
+        <img class="img-fluid" src="../../../assets/svg/components/plane.svg" alt="Image Description" style="width: 10rem;">
+      </figure>
+      <h2 class="mb-7">There are no procedures added Yet. Consider to Log in and add some.</h2>
+      <a class="link link-pointer" routerLink="/user/login">Log in</a>
+    </div>
+  </div>
+  <!-- End CTA -->
