--- a/Facecare/src/app/core/header/header.component.html
+++ b/Facecare/src/app/core/header/header.component.html
@@ -30,7 +30,7 @@
                         <a class="nav-link" routerLink="procedures">Procedures</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="bi-person nav-icon"></i>{{username}} Profile</a>
+                        <a class="nav-link" href="#"><i class="bi-person nav-icon"></i>{{username}} profile</a>
                     </li>
                     <!-- show add only if admin -->
                     <li class="nav-item" *ngIf="isLoggedIn">
