--- a/Facecare/src/app/procedures/procedure-details/procedure-details.component.html
+++ b/Facecare/src/app/procedures/procedure-details/procedure-details.component.html
@@ -25,7 +25,7 @@
           </figure>
           <!-- End Blockquote -->
           <!-- should add procedure to user ref in the back end -->
-          <a class="btn btn-dark" href="#">Add</a> &nbsp;
+          <a class="btn btn-dark" href="#" *ngIf="isLoggedIn">Add</a> &nbsp;
           <a class="btn btn-dark" routerLink="/procedures">Cancel</a>
         
         </div>
